hotfix: fix galleries on small displays (sorry)

--- a/sass/base/typography/_basics.sass
+++ b/sass/base/typography/_basics.sass
@@ -38,7 +38,7 @@ $article-content-max-width: 660px
 // hacked for longform launch
 // todo: delete when possible (NB)
 div.figure-full-width
-  width: em(910px) //100%
+  width: 100% //100%
   max-width: em(910px)
   margin: 0 auto
 
@@ -101,7 +101,7 @@ figure
   // hacked for longform-launch
   // todo: make responsible by height (NB)
   &.figure-full-width
-    width: em(910px) //100%
+    width: 100% //100%
     max-width: em(910px)
     margin: 0 auto
     .figure__media, img
@@ -167,4 +167,3 @@ figure
       text-align: left
       +respond-max($break-2)
         margin-top: $fine
-
